Fixed alignment issues across pages

--- a/style.css
+++ b/style.css
@@ -1,60 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
-body{
-    font-family: 'Rubik', sans-serif;
-    font-weight: 350;
+body {
+  font-family: 'Rubik', sans-serif;
+  font-weight: 350;
 }
 
-  .homeBanner {
-    width: 100%;
-    height: 60vh;
-    background: url('assets/homeBanner.jpg') center/cover no-repeat;
-    display: flex;
-    align-items: center;
-  }
+.homeBanner {
+  width: 100%;
+  height: 60vh;
+  background: url('assets/homeBanner.jpg') center/cover no-repeat;
+  display: flex;
+  align-items: center;
+}
 
-  .contactBanner {
-    width: 100%;
-    height: 60vh;
-    background: url('assets/contactBanner.jpg') center/cover no-repeat;
-    display: flex;
-    align-items: center;
-  }
+.contactBanner {
+  width: 100%;
+  height: 60vh;
+  background: url('assets/contactBanner.jpg') center/cover no-repeat;
+  display: flex;
+  align-items: center;
+}
 
-  .aboutBanner {
-    width: 100%;
-    height: 60vh;
-    background: url('assets/aboutBanner.jpg') center/cover no-repeat;
-    display: flex;
-    align-items: center;
-  }
+.aboutBanner {
+  width: 100%;
+  height: 60vh;
+  background: url('assets/aboutBanner.jpg') center/cover no-repeat;
+  display: flex;
+  align-items: center;
+}
 
-  .btnMenu {
-    width: 30vw;
-  }
+.btnMenu {
+  width: 33vw;
+}
 
-  .menusBanner {
-    width: 100%;
-    height: 60vh;
-    background: url('assets/menusBanner.jpg') center/cover no-repeat;
-    display: flex;
-    align-items: center;
-  }
+.menusBanner {
+  width: 100%;
+  height: 60vh;
+  background: url('assets/menusBanner.jpg') center/cover no-repeat;
+  display: flex;
+  align-items: center;
+}
 
-  .bookBanner {
-    width: 100%;
-    height: 60vh;
-    background: url('assets/bookBanner.jpg') center/cover no-repeat;
-    display: flex;
-    align-items: center;
-  }
+.bookBanner {
+  width: 100%;
+  height: 60vh;
+  background: url('assets/bookBanner.jpg') center/cover no-repeat;
+  display: flex;
+  align-items: center;
+}
 
-  .takeawayBanner {
-    width: 100%;
-    height: 60vh;
-    background: url('assets/takeawayBanner.jpg') center/cover no-repeat;
-    display: flex;
-    align-items: center;
-  }
-
-
+.takeawayBanner {
+  width: 100%;
+  height: 60vh;
+  background: url('assets/takeawayBanner.jpg') center/cover no-repeat;
+  display: flex;
+  align-items: center;
+}
